--- a/src/frontend/salgados-meire/src/App.css
+++ b/src/frontend/salgados-meire/src/App.css
@@ -1,3 +1,19 @@
 .App {
   text-align: center;
 }
+
+button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 10px;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #3e8e41
+}
