--- a/src/frontend/salgados-meire/src/styles/MenuCard.css
+++ b/src/frontend/salgados-meire/src/styles/MenuCard.css
@@ -13,10 +13,6 @@
   text-align: center;
 }
 
-.menu-card:hover {
-  transform: scale(1.1);
-  z-index: 1;
-}
 
 .menu-card-img {
   width: 100%;
@@ -33,6 +29,13 @@
   margin: 0;
   color: #ffff;
   font-weight: 42px;
+}
+
+.menu-card-price {
+  font-size: 24px;
+  margin: 0;
+  color: black;
+  font-weight: bold;
 }
 
 .menu-card-description {
