--- a/src/frontend/salgados-meire/src/styles/MenuScreen.css
+++ b/src/frontend/salgados-meire/src/styles/MenuScreen.css
@@ -6,6 +6,7 @@ body {
   display: flex;
   flex-wrap: wrap; /* Cards quebram para a próxima linha */
   justify-content: center; /* Centraliza os cards horizontalmente */
+  margin-top: 100px;
 }
 
 .div-container {
