--- a/src/frontend/salgados-meire/src/styles/MenuScreen.css
+++ b/src/frontend/salgados-meire/src/styles/MenuScreen.css
@@ -1,11 +1,12 @@
 body {
-  background-color: #f37602;
+  background-color: #f37602 !important;
 }
 
 .menu-container {
   display: flex;
   flex-wrap: wrap; /* Cards quebram para a próxima linha */
   justify-content: center; /* Centraliza os cards horizontalmente */
+  margin-top: 100px;
 }
 
 .div-container {
