--- a/src/frontend/salgados-meire/src/styles/MenuCard.css
+++ b/src/frontend/salgados-meire/src/styles/MenuCard.css
@@ -1,8 +1,8 @@
 .menu-card {
-  background-color: #13adc2;
+  background-color: #13adc2 !important;
   flex-wrap: wrap; /* Cards quebram para a próxima linha */
   border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2) !important;
   padding: 20px;
   margin: 20px;
   width: 300px;
@@ -11,11 +11,6 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-}
-
-.menu-card:hover {
-  transform: scale(1.1);
-  z-index: 1;
 }
 
 .menu-card-img {
@@ -31,14 +26,25 @@
 .menu-card-title {
   font-size: 18px;
   margin: 0;
-  color: #ffff;
+  color: #ffff !important;
   font-weight: 42px;
+}
+
+.menu-card-price {
+  font-size: 24px;
+  margin: 0;
+  color: black !important;
+  font-weight: bold;
 }
 
 .menu-card-description {
   font-size: 14px;
   margin: 5px 0;
-  color: #ffff;
+  color: #ffff !important;
+}
+
+.button-card{
+  padding: 5px;
 }
 
 @media (max-width: 480px) {
